<resources>
    <string name="app_name">Calculadora-Combustivel</string>
    <string name="input_text_gasolina">0.00</string>
    <string name="label_gasolina">Gasolina</string>
    <string name="input_text_ethanol">0.00</string>
    <string name="label_ethanol">Ethanol</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="label_title">Descubra qual rende mais!</string>
    <string name="label_who_is_better">Está compensando usar</string>
</resources>
