<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.zapptsdev.calculadora_combustivel.MainActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:fontFamily="robot-regular"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_title"
        android:layout_margin="12dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/gasolina"/>
            <View
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/scrim"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="robot-regular"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_gasolina"
                android:textColor="@android:color/white"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ethanol"/>
            <View
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/scrim"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="robot-regular"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_ethanol"
                android:textColor="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/frame_layout_image_view_gasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/image_view_gasolina"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/gasolina" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_label_gasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp">
            <TextView
                android:id="@+id/label_gasolina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gasolina"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20dp"
                android:fontFamily="robot-regular"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_input_text_gasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp">
            <EditText
                android:id="@+id/input_text_gasolina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/input_text_gasolina"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20dp"
                android:fontFamily="robot-regular"
                android:maxLines="1"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:backgroundTint="@android:color/holo_red_light"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/frame_layout_image_view_ethanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/image_view_ethanol"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ethanol"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_label_ethanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp">
            <TextView
                android:id="@+id/label_ethanol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ethanol"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20dp"
                android:fontFamily="robot-regular"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_input_text_ethanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp">
            <EditText
                android:id="@+id/input_text_ethanol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/input_text_ethanol"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20dp"
                android:fontFamily="robot-regular"
                android:maxLines="1"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:backgroundTint="@android:color/holo_green_light"
                />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/btn_calcular"
        android:textSize="20dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="robot-regular"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:gravity="center"/>

</LinearLayout>
